✨ chore(gradle): Add new build logic defaults and sync tasks
- Introduced `SyncVersionPropertiesTask` to synchronize `gradle.properties` with version catalog.
- Added properties for `foojay-resolver` plugin and new build logic defaults `buildlogic.java.version`.
- Created `syncVersionProperties` and `syncBuildLogicVersionProperties` tasks for property synchronization.
- Updated `.gitignore` to include `**/bin` excludes.
- Updated `CHANGELOG.md` with release notes for version `0.2.1`.
- Deleted outdated wiki file: "Challenges in Testing Metaheuristic Algorithms.pdf".

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,15 @@ org.gradle.warning.mode=all
 
 # Enable Kotlin compiler optimizations
 kotlin.incremental=true
+
+# Plugin versions
+# Mirrors the libs catalog entry `foojay-resolver`; keep it synced via `:syncVersionProperties`.
+plugin.foojay-resolver.version=1.0.0
+
+# Maven publishing coordinates
+group=cl.ravenhill.kalm
+version=0.2.1
+
+# Build-logic defaults
+# Default Java language version used by build logic (can be overridden per-machine/CI)
+buildlogic.java.version=22
