✨ chore(ci): Add Hadolint CI integration and Kotlin-based linting
- Introduced Hadolint linting in CI pipelines to validate Dockerfiles (`dockerfile:lint` job).
- Added Kotlin script (`Invoke-Hadolint.kts`) for advanced local Dockerfile linting, with options for multiple files and configurable thresholds.
- Integrated a new Docker container (`hadolint-kts`) for running the Kotlin script via Docker Compose.
- Updated documentation (`README.md`, `CI_CD.md`, `CONTAINERS_AND_ENVIRONMENTS.md`) with usage instructions for Hadolint integration.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,15 @@ variables:
   DOCKER_TLS_CERTDIR: ""
   DOCKER_DRIVER: overlay2
 
+dockerfile:lint:
+  stage: test
+  image: hadolint/hadolint:latest-debian
+  script:
+    - hadolint --failure-threshold warning Dockerfile
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_COMMIT_BRANCH
+
 container:smoke:
   stage: test
   image: docker:24.0
