🛠️ feat(tools): introduce Hadolint CLI and testing framework
- Added a new Hadolint Kotlin CLI to lint Dockerfiles:
  - Supports failure thresholds (`error`, `warning`, etc.) and strict file checks.
  - Resolves existing/missing Dockerfiles and validates dependencies (`hadolint`, `docker`).
- Integrated `tools` Gradle module with reusable logic and testing components.
- Migrated `invoke-hadolint.kts` script to Kotlin CLI (`HadolintCli`) for modularity and improved maintainability.
- Enhanced Docker setup:
  - Builds Kotlin CLI into standalone JAR.
  - Aligned Dockerfile entrypoints with the CLI for better runtime control.
- Added comprehensive unit tests for CLI behavior using Kotest:
  - Validates argument parsing, file resolution, and runner execution.
  - Introduced a `FakeRunner` for robust testing of success and failure scenarios.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,9 @@ services:
     volumes:
       - .:/workspace:cached
     working_dir: /workspace
-    entrypoint: ["kotlin", "./scripts/quality/invoke-hadolint.kts"]
+    entrypoint: ["kotlin", "-classpath", "/opt/hadolint-cli.jar", "cl.ravenhill.kalm.tools.hadolint.HadolintCli"]
+    # Pass CLI args at runtime, e.g.:
+    # `docker compose --profile hadolint run --rm hadolint-kts --failure-threshold error --dockerfile Dockerfile`
 
 volumes:
   gradle-cache: {}
