--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ kotlin-bin-compatibility-validator = "0.18.1"
 kotlinx-serialization = "1.10.0"
 version-catalog-update = "1.0.1"
 dokka = "2.1.0"
+clikt = "5.0.1"
 
 [libraries]
 # Gradle plugins used in build-logic dependencies
@@ -27,12 +28,13 @@ kotest-property = { module = "io.kotest:kotest-property", version.ref = "kotest"
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
 # Core Kotlin Gradle plugin (required for all Kotlin projects)
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+#noinspection UnusedVersionCatalogEntry
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" } # DON'T REMOVE this entry, it's used by the :platform module
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt" }
 
 [plugins]
 ben-manes-versions = { id = "com.github.ben-manes.versions", version.ref = "ben-manes-versions" }
-dependency-updates = { id = "com.github.ben-manes.versions", version.ref = "ben-manes-versions" }
 # Static analysis plugin for Kotlin codebases
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 detekt-redmadrobot = { id = "com.redmadrobot.detekt", version.ref = "detekt-redmadrobot" }
