--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+arrow = "2.2.0"
 ben-manes-versions = "0.53.0"
 detekt = "1.23.8"
 detekt-redmadrobot = "0.19.1"
@@ -11,6 +12,7 @@ kotlinx-serialization = "1.10.0"
 version-catalog-update = "1.0.1"
 
 [libraries]
+arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 # Gradle plugins used in build-logic dependencies
 ben-manes-versions-plugin = { module = "com.github.ben-manes:gradle-versions-plugin", version.ref = "ben-manes-versions" }
 # Optional formatting plugin for Detekt (requires detekt CLI/tooling)
